# excursionGUI

./: CMakeLists.txt  Main.qml  main.cpp
controller/: excursioncontroller.cpp  excursioncontroller.h
controller/dao/: excursion.cpp  excursion.h  excursiondao.h
controller/dao/impl/: excursiondaofileimpl.cpp  excursiondaofileimpl.h
view/: excursionview.cpp  excursionview.h
